# sopel-anilist

./: NEWS  README.md  anilist.py  pyproject.toml
.github/workflows/: trusted-publishing.yml
sopel_anilist/: __init__.py
