[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_anilist", "sopel_anilist.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.md", "NEWS"], content-type="text/markdown" }

[project]
name = "sopel-anilist"
version = "0.2.0"
description = "AniList plugin for Sopel IRC bots"

authors = [
  { name="dgw", email="dgw@technobabbl.es" },
]

license = { text="EFL-2.0" }
dynamic = ["readme"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]

requires-python = ">=3.8, <4"
dependencies = [
    "sopel>=7.1",
    # Sopel also requires requests, but we should be explicit
    "requests",
    # TODO: bleach is deprecated - https://github.com/mozilla/bleach/issues/698
    # Popular replacement candidate seems to be https://pypi.org/project/nh3/
    "bleach>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/dgw/sopel-anilist"
"Bug Tracker" = "https://github.com/dgw/sopel-anilist/issues"

[project.entry-points."sopel.plugins"]
"anilist" = "sopel_anilist"
